[package]
name = "payload_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
futures = "0.3.28"
const_format = "0.2.30"
paste = "1.0"
regex_proc = { path = "./regex_proc"}
patterns = { path = "./patterns"}