[package]
name = "payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
futures = "0.3.28"
const_format = "0.2.30"
paste = "1.0"
payload_proc = { path = "payload_proc" }
shared = { path = "shared" }
paste = "1.0.13"